# project01_symplectic_integrator-rjpower4

./: .JuliaFormatter.toml  .bazelrc  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Manifest.toml  Project.toml  README.md  WORKSPACE  format.jl  keplerPropagate.m  plotStuff.m  rotationMatrices.m  runner.jl
.github/workflows/: FormatCheck.yaml  RunTests.yaml
data/: fetch_kernels.py  output.csv
scripts/: kepler_propagation_demo.jl  main.jl  neptune_pluto.jl  pluto_drift.jl  pluto_orbit_demo.jl
src/: CMakeLists.txt  EAPS.jl  Symple.jl  body.jl  constants.jl  dhc.jl  dimensions.jl  elements.jl  kepler.jl  old.jl  path.jl  pathutils.jl  scratch.cpp  simulation.jl  spice.jl  state.jl  twobody.jl  units.jl  util.jl
src/eaps/: BUILD  CMakeLists.txt  celestial_body.cpp  celestial_body.hpp  config.hpp  kepler_problem.cpp  kepler_problem.hpp  vector3.cpp  vector3.hpp
src/eaps/include/: CMakeLists.txt
src/eaps/include/eaps/: config.hpp
src/eaps/include/eaps/body/: celestial_body.hpp  celestial_body_type.hpp
src/eaps/include/eaps/details/: platform.hpp
src/eaps/include/eaps/twobody/: conic.hpp  kepler.hpp  keplerian_elements.hpp
src/eaps/src/: CMakeLists.txt  sample.cpp
src/eaps/src/body/: celestial_body.cpp
src/eaps/src/twobody/: conic.cpp  kepler.cpp  keplerian_elements.cpp
src/eaps/test/: CMakeLists.txt  conic_test.cpp  keplerian_elements_test.cpp
src/ignore/: EAPS.jl  kepler.jl  pathutils.jl  twobody.jl
src/old/: body.jl  dhc.jl  kepler.jl  simulation.jl  state.jl
src/resources/: bodies.toml
test/: body.jl  constants.jl  elements.jl  kepler.jl  path.jl  runtests.jl  simulation.jl  state.jl  state_tests.jl  twobody.jl  units.jl
test/eaps/: BUILD  celestial_body_test.cpp  kepler_problem_test.cpp  vector3_test.cpp
test/ignore/: kepler_tests.jl  state_tests.jl
test/old/: dimensions.jl  elements.jl  runtests.jl  spice.jl  util.jl
tools/: fetch_kernels.jl
