# ========================================================================================
# File   : 
# Brief  : 
# Author : Rolfe Power <rpower@purdue.edu>
# ========================================================================================

add_library(eaps-headers INTERFACE)
target_include_directories(eaps-headers INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")